<resources>
    <string name="app_name">ComputerWork</string>
    <string name="greeting_text">Добро пожаловать!
    Желаете войти?</string>
    <string name="salutation_text">Добро пожаловать, пользователь!</string>
    <string name="button_text">Войти</string>
    <string name="login_text">Введите логин</string>
    <string name="password_text">Введите пароль</string>
    <string name="registration_hint">Нет учётной записи? Зарегистрируйтесь!</string>
    <string name="registration_text"><u>Перейти к регистрации</u></string>
    <string name="registrationtry_text">Зарегистрироваться</string>
    <string name="authorization_text">Вернуться к авторизации</string>
    <string name="email_hint">Введите e-mail</string>
    <string name="password_hint">Введите пароль</string>
    <string name="repeatpassword_hint">Повторите пароль</string>
    <string name="login_hint">Введите логин</string>
    <string name="authorization_hint">Уже есть учётная запись? Авторизируйтесь!</string>
    <string name="authorizationbutton_text">Вернуться к авторизации</string>
    <string name="admin_func1">Работа с инвентарём</string>
    <string name="admin_func2">Работа с комп. парком</string>
    <string name="admin_func3">Работа с пользователями</string>
    <string name="admin_funcHint">Выберите категорию функционала</string>
    <string name="exit_button">Выйти из учётной записи</string>
    <string name="inventory_title">Работа с инвентарём</string>
    <string name="inventory_hint">Выберите функцию</string>
    <string name="admin_func1.1">Создание инвентаря</string>
    <string name="admin_func1.2">Просмотр инвентаря</string>
    <string name="admin_func1.3">Внесение в инвентарь</string>
    <string name="return_hint">Вернуться в главное меню</string>
    <string name="park_title">Работа с компьютерным парком </string>
    <string name="park_hint">Выберите функцию</string>
    <string name="admin_func2.1">Просмотр состояния парка</string>
    <string name="admin_func2.2">Создание компьютерного парка</string>
    <string name="admin_func2.3">Добавление пользователя</string>
    <string name="admin_func2.4">Удаление пользователя</string>
    <string name="user_title">Работа с пользователями</string>
    <string name="user_hint">Выберите функцию</string>
    <string name="admin_func3.1">Поступившие заказы</string>
    <string name="admin_func3.2">Поступившие запросы</string>
    <string name="admin_func3.3">Предоставление должности</string>
    <string name="inventory1_title">Создание инвентаря</string>
    <string name="inventory1_hint">Введите инвентарный номер</string>
    <string name="inventory1_button">Подтвердить</string>
    <string name="inventory2_title">Список компонентов</string>
    <string name="inventory2_hint">Выберите инвентарь</string>
    <string name="inventory2_button">Начать поиск</string>
    <string name="inventory3_hint">Введите тип продукта</string>
    <string name="inventory3_hint1">Выберите модель продукта</string>
    <string name="inventory3_hint2">Введите цену</string>
    <string name="inventory3_hint3">Выберите инвентарь</string>
    <string name="addproduct_combobox1">Выберите тип продукта</string>
    <string name="addproduct_combobox2">Выберите модель продукта</string>
    <string name="addproduct_func1">Укажите цену</string>
    <string name="addproduct_combobox3">Выберите инвентарь</string>
    <string name="addptoduct_title">Создание компьютерного парка</string>
    <string name="createpark_edittext1">Введите название парка</string>
    <string name="createpark_edittext2">Введите номер парка</string>
    <string name="createpark_edittext3">Введите e-mail</string>
    <string name="createpark_edittext4">Введите пароль</string>
    <string name="checkpark_hint">Выберите компьютерный парк</string>
    <string name="user_title1">Приветствую</string>
    <string name="user_func1">Заказ продукта</string>
    <string name="user_func2">Вызов компьютерного мастера</string>
    <string name="user_greeting">Добро пожаловать, user!</string>
    <string name="Return">Выйти из учётной записи</string>
    <string name="User_hint">Выберите тип продукта</string>
    <string name="User_hint1">Выберите модель продукта</string>
    <string name="Accept">Подтвердить</string>
    <string name="ReturnToMenu">Вернуться в главное меню</string>
    <string name="User_hint3">Введите номер устройства</string>
    <string name="User_hint4">Опишите вашу проблему (макс. 100 симв.)</string>
    <string name="Master_func1">Просмотр запросов</string>
    <string name="Master_func2">Выполнение запроса</string>
    <string name="Master_hint">Выберите номер запроса</string>
    <string name="Master_hint1">Введите заключение</string>
    <string name="Master_ChangeBox">Замена компонента</string>
    <string name="MenuUser_button1">Заказ продукта</string>
    <string name="MenuUser_button2">Вызов комп. мастера</string>
    <string name="GiveProve_hint1">Выберите пользователя</string>
    <string name="GiveProve_hint2">Выберите должность</string>
    <string name="Order_hint">Выберите цену</string>
    <string name="SystemSite">О системе</string>
</resources>