<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuuser">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_greeting" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/park_hint" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Product"
            android:text="@string/MenuUser_button1" />

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Order"
            android:text="@string/MenuUser_button2" />

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ExitUser"
            android:text="@string/exit_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>