<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextLog"
            android:layout_width="349dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:ems="10"
            android:hint="@string/login_hint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:ems="10"
            android:hint="@string/repeatpassword_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:text="@string/registrationtry_text"
            android:textSize="18sp"
            android:onClick="SuccessRegistration"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:text="@string/authorization_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.4"
            android:text="@string/authorizationbutton_text"
            android:textSize="18sp"
            android:onClick="junctionReturn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>