<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:text="@string/user_func1"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="68dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/inventory3_hint1"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/inventory3_hint"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/Order_hint"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <EditText
            android:id="@+id/editTextCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:inputType="text"
            android:hint="Name" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Accept" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ReturnToMenu"
            android:text="@string/ReturnToMenu" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>