<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acceptquery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acceptquery">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/Master_func2"
            android:textSize="24sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/Master_hint"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinnerQueries"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <EditText
            android:id="@+id/editTextConclusion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/Master_hint1"
            android:inputType="text"
            android:maxLength="100" />

        <CheckBox
            android:id="@+id/checkBoxUsingComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/ActivateChoosing" />
    <LinearLayout
        android:id="@+id/spinners_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/Product_Classification" />

        <Spinner
            android:id="@+id/spinnerUsingModule"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/addproduct_combobox1" />

        <Spinner
            android:id="@+id/spinnerUsingType"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/addproduct_combobox2" />

        <Spinner
            android:id="@+id/spinnerUsingModel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.4" />
    </LinearLayout>

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Accept" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ReturnToMs"
            android:text="@string/ReturnToMenu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
