<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/inventory1"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:text="@string/inventory1_title"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:height="48dp"
            android:ems="10"
            android:hint="@string/inventory1_hint"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/inventory1_button" />

        <Button
            android:id="@+id/button15"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="Return"
            android:text="@string/return_hint" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
