<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inventory3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/inventory3_hint"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="409dp"
            android:layout_height="48dp"
            android:layout_weight="0.3"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="215dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/inventory3_hint1"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="409dp"
            android:layout_height="43dp"
            android:layout_weight="0.3"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="285dp" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/inventory3_hint2"
            android:inputType="number"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="371dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/inventory3_hint3"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="124dp" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="409dp"
            android:layout_height="48dp"
            android:layout_weight="0.3"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="486dp" />


        <Button
            android:id="@+id/button10"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/inventory1_button"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="537dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/return_hint"
            android:onClick="ReturnToAdm"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="624dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>